# jembbos

./: .gitignore  Cargo.toml  Makefile  README.md  grub.cfg  install.sh  kernel.c  kernel.rs  script.sh  script_grub.sh
.cargo/: config.toml
gdt/: ai_gdt_v1.rs  ai_gdt_v2.rs
src/: main.rs  start.rs  vga_buffer.rs
